[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://main/screens/MatchScreen.gd" type="Script" id=2]

[node name="MatchScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -1.0
margin_right = 3.0
margin_bottom = -1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 533.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="CreatePanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_right = 526.0
margin_bottom = 93.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CreatePanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -15.0
margin_right = -15.0
margin_bottom = 15.0
grow_horizontal = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/CreatePanel/HBoxContainer"]
margin_top = 3.0
margin_right = 143.0
margin_bottom = 27.0
text = "Create a room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/CreatePanel/HBoxContainer"]
margin_left = 147.0
margin_right = 414.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/CreatePanel/HBoxContainer"]
margin_left = 418.0
margin_right = 496.0
margin_bottom = 30.0
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 526.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/JoinPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -17.0
margin_right = -17.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/JoinPanel/HBoxContainer"]
margin_top = 5.0
margin_right = 121.0
margin_bottom = 29.0
text = "Join match:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/JoinPanel/HBoxContainer"]
margin_left = 125.0
margin_right = 361.0
margin_bottom = 34.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasteButton" type="Button" parent="PanelContainer/VBoxContainer/JoinPanel/HBoxContainer"]
margin_left = 365.0
margin_right = 432.0
margin_bottom = 34.0
text = "Paste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="PanelContainer/VBoxContainer/JoinPanel/HBoxContainer"]
margin_left = 436.0
margin_right = 492.0
margin_bottom = 34.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/JoinPanel/HBoxContainer/PasteButton" to="." method="_on_PasteButton_pressed"]
